--- a/task_1/index.html
+++ b/task_1/index.html
@@ -3,10 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Welcome to Nginx Container</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background: linear-gradient(135deg, #4a90e2, #50c6d8);
+            color: #fff;
+        }
+        .container {
+            text-align: center;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.6);
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        }
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+        h2 {
+            font-size: 1.8rem;
+            margin-bottom: 15px;
+        }
+        p {
+            font-size: 1.2rem;
+            margin-bottom: 5px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Nginx Server</h1>
-    <p>This page is being served by an Nginx container.</p>
+    <div class="container">
+        <h1>This is the HTML page being served by Nginx Container</h1>
+        <h2>DIPTI Kubernetes Final Exam</h2>
+        <p>Created by Hasan Habib</p>
+    </div>
 </body>
 </html>
